--- a/plugin.yml
+++ b/plugin.yml
@@ -3,3 +3,8 @@ main: src\plugin\Main
 api: 3.19.0
 version: 0.1.0
 author: ChaseDukeYT
+ 
+ commands:
+ youtube:
+  description: "Example1 command"
+  usage: "/example1"
